Fixed: btn cart overflow

--- a/Resources/assets/less/branch-navbar.less
+++ b/Resources/assets/less/branch-navbar.less
@@ -273,7 +273,6 @@ header {
     background-color: @navbar-button-bg;
     border: @navbar-button-border;
     height: @navbar-button-height;
-    width: @navbar-button-width;
     text-align: center;
     padding: 4px 5px;
     display: block;
